--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 -i https://pypi.org/simple
 aioredis==1.2.0
 amqp==2.4.2
-asgiref==2.3.2
+asgiref==3.1.2
 asn1crypto==0.24.0
 async-timeout==3.0.1
 attrs==19.1.0
@@ -12,15 +12,15 @@ billiard==3.5.0.5
 cachetools==3.1.0
 celery[redis]==4.2.1
 certifi==2019.3.9
-cffi==1.12.2
-channels-redis[cryptography]==2.3.2
-channels==2.1.7
+cffi==1.12.3
+channels-redis[cryptography]==2.4.0
+channels==2.2.0
 chardet==3.0.4
 click==7.0
 constantly==15.1.0
 cryptography==2.6.1
-daphne==2.2.5
-defusedxml==0.5.0 ; python_version >= '3.0'
+daphne==2.3.0
+defusedxml==0.6.0 ; python_version >= '3.0'
 django-appconf==1.0.3
 django-celery-beat==1.4.0
 django-celery-model==0.2
@@ -29,7 +29,7 @@ django-compressor==2.2
 django-redis==4.10.0
 django-timezone-field==3.0
 django==1.11.20
-ecdsa==0.13
+ecdsa==0.13.2
 future==0.17.1
 google-api-python-client==1.7.7
 google-auth-httplib2==0.0.3
@@ -37,17 +37,17 @@ google-auth==1.6.3
 gunicorn==19.9.0
 h11==0.8.1
 hiredis==1.0.0
-httplib2==0.12.1
+httplib2==0.12.3
 httptools==0.0.13
-hyperlink==18.0.0
+hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
 isodate==0.6.0
-kombu==4.4.0
-msgpack==0.5.6
+kombu==4.5.0
+msgpack==0.6.1
 oauth2client==4.1.3
 oauthlib==3.0.1
-pyasn1-modules==0.2.4
+pyasn1-modules==0.2.5
 pyasn1==0.4.5
 pycparser==2.19
 pyhamcrest==1.9.0
@@ -59,7 +59,7 @@ python-hcalendar==0.2.4
 python-jose==3.0.1
 python-social-auth==0.3.6
 python3-openid==3.1.0 ; python_version >= '3.0'
-pytz==2018.9
+pytz==2019.1
 rcssmin==1.0.6
 redis==3.2.1
 requests-oauthlib==1.2.0
@@ -69,14 +69,14 @@ rsa==4.0
 six==1.12.0
 social-auth-app-django==3.1.0
 social-auth-core[openidconnect]==2.0.0
-soupsieve==1.9
-twisted==18.9.0
+soupsieve==1.9.1
+twisted==19.2.0
 txaio==18.8.1
 uritemplate==3.0.0
-urllib3==1.24.1
-uvicorn==0.6.1
+urllib3==1.24.2
+uvicorn==0.7.0
 uvloop==0.12.2
-vine==1.3.0
+vine==5.0.0a1
 websockets==7.0
 whitenoise==4.1.2
 zope.interface==4.6.0
