Update locked dependencies due to security issues
Try to improve performance of django-live-templates.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,84 @@
 -i https://pypi.org/simple
-aioredis==1.2.0
-amqp==2.4.2
-asgiref==3.1.2
-asn1crypto==0.24.0
+aioredis==1.3.0
+amqp==2.5.1
+asgiref==3.2.2
 async-timeout==3.0.1
-attrs==19.1.0
-autobahn==19.3.3
-automat==0.7.0
-beautifulsoup4==4.7.1
-billiard==3.5.0.5
-cachetools==3.1.0
-celery[redis]==4.2.1
-certifi==2019.3.9
-cffi==1.12.3
+attrs==19.3.0
+autobahn==19.10.1
+automat==0.8.0
+beautifulsoup4==4.8.1
+billiard==3.6.1.0
+cachetools==3.1.1
+celery[redis]==4.3.0
+certifi==2019.9.11
+cffi==1.13.0
 channels-redis[cryptography]==2.4.0
-channels==2.2.0
+channels==2.3.0
 chardet==3.0.4
 click==7.0
 constantly==15.1.0
-cryptography==2.6.1
+cryptography==2.8
 daphne==2.3.0
 defusedxml==0.6.0 ; python_version >= '3.0'
 django-appconf==1.0.3
-django-celery-beat==1.4.0
+django-celery-beat==1.5.0
 django-celery-model==0.2
-django-celery-results==1.0.4
-django-compressor==2.2
+django-celery-results==1.1.2
+django-compressor==2.3
 django-redis==4.10.0
-django-timezone-field==3.0
-django==1.11.20
-ecdsa==0.13.2
-future==0.17.1
+django-timezone-field==3.1
+django==1.11.25
+ecdsa==0.13.3
+future==0.18.1
 google-api-python-client==1.7.7
 google-auth-httplib2==0.0.3
 google-auth==1.6.3
 gunicorn==19.9.0
 h11==0.8.1
 hiredis==1.0.0
-httplib2==0.12.3
+httplib2==0.14.0
 httptools==0.0.13
 hyperlink==19.0.0
 idna==2.8
+importlib-metadata==0.23
 incremental==17.5.0
 isodate==0.6.0
-kombu==4.5.0
-msgpack==0.6.1
+kombu==4.6.5
+more-itertools==7.2.0
+msgpack==0.6.2
 oauth2client==4.1.3
-oauthlib==3.0.1
-pyasn1-modules==0.2.5
-pyasn1==0.4.5
+oauthlib==3.1.0
+pyasn1-modules==0.2.7
+pyasn1==0.4.7
 pycparser==2.19
 pyhamcrest==1.9.0
 pyjwt==1.7.1
 python-appengine-auth==0.1.dev0
-python-crontab==2.3.6
+python-crontab==2.3.9
 python-dateutil==2.7.5
 python-hcalendar==0.2.4
 python-jose==3.0.1
 python-social-auth==0.3.6
 python3-openid==3.1.0 ; python_version >= '3.0'
-pytz==2019.1
+pytz==2019.3
 rcssmin==1.0.6
-redis==3.2.1
+redis==3.3.11
 requests-oauthlib==1.2.0
-requests==2.21.0
-rjsmin==1.0.12
+requests==2.22.0
+rjsmin==1.1.0
 rsa==4.0
 six==1.12.0
 social-auth-app-django==3.1.0
-social-auth-core[openidconnect]==2.0.0
-soupsieve==1.9.1
-twisted==19.2.0
+social-auth-core[openidconnect]==3.2.0
+soupsieve==1.9.4
+twisted==19.7.0
 txaio==18.8.1
 uritemplate==3.0.0
-urllib3==1.24.2
-uvicorn==0.7.0
-uvloop==0.12.2
-vine==5.0.0a1
-websockets==7.0
-whitenoise==4.1.2
+urllib3==1.25.6
+uvicorn==0.9.0
+uvloop==0.13.0
+vine==1.3.0
+websockets==8.0.2
+whitenoise==4.1.4
+zipp==0.6.0
 zope.interface==4.6.0
