--- a/Pipfile
+++ b/Pipfile
@@ -8,13 +8,13 @@ pylint = "*"
 coverage = "*"
 
 [packages]
-channels = "==2.2.0"
+channels = "~=2.3.0"
 channels-redis = {extras = ["cryptography"],version = "==2.4.0"}
-celery = {extras = ["redis"],version = "==4.2.1"}
+celery = {extras = ["redis"],version = "~=4.3"}
 django-celery-model = "==0.2"
-django-redis = "==4.10.0"
+django-redis = "~=4.10.0"
 google-api-python-client = "==1.7.7"
-social-auth-core = {extras = ["openidconnect"],version = "==2.0.0"}
+social-auth-core = {extras = ["openidconnect"],version = "==3.2.0"}
 social-auth-app-django = "==3.1.0"
 python-appengine-auth = "==0.1.dev0"
 python-dateutil = "==2.7.5"
@@ -24,7 +24,7 @@ uvicorn = "*"
 gunicorn = "*"
 whitenoise = "*"
 pytz = "*"
-Django = "==1.11.20"
-django_celery_beat = "==1.4.0"
-django_celery_results = "==1.0.4"
-django_compressor = "==2.2"
+Django = "~=1.11"
+django_celery_beat = "==1.5.0"
+django_celery_results = "==1.1.2"
+django_compressor = "~=2.3"
