--- a/Pipfile
+++ b/Pipfile
@@ -22,9 +22,10 @@ python-hcalendar = "==0.2.4"
 oauth2client = "==4.1.3"
 uvicorn = "*"
 gunicorn = "*"
-whitenoise = "*"
+whitenoise = "~=4.1"
 pytz = "*"
 Django = "~=1.11"
 django_celery_beat = "==1.5.0"
 django_celery_results = "==1.1.2"
 django_compressor = "~=2.3"
+django-timezone-field = "~=3.1"
